--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -5,10 +5,10 @@ unsafe = true
 [goldmark.extensions.passthrough]
 enable = true
 
-# LaTeX math support
+# LaTeX math support and Mermaid diagram support
 # https://gohugo.io/content-management/mathematics/
 [goldmark.extensions.passthrough.delimiters]
-block = [['\[', '\]'], ['$$', '$$']]
+block = [['\[', '\]'], ['$$', '$$'], ['```mermaid', '```']]
 inline = [['\(', '\)']]
 
 [tableOfContents]
