--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -2,7 +2,9 @@
  "compilerOptions": {
   "baseUrl": ".",
   "paths": {
-   "*": null
+   "*": [
+    "../../../Library/Caches/hugo_cache/modules/filecache/modules/pkg/mod/github.com/!cai!jimmy/hugo-theme-stack/v3@v3.30.0/assets/*"
+   ]
   }
  }
 }
